@@ -6,14 +6,14 @@
 [tox]
 envlist =
     py{35,36}-django111
-    py{35,36,37}-django21
     py{35,36,37}-django22
+    py{36,37,38}-django30
 
 [testenv]
 deps =
     django111: django>=1.11,<2.0
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<3.0
+    django30: Django>=3.0,<3.1
     -r{toxinidir}/example_project/requirements.txt
 changedir =
     {toxinidir}/example_project/
