@@ -4,7 +4,8 @@ Changelog
 3.11 (unreleased)
 -----------------
 
-- Dropped support for Python 2 and 3.4.
+- Added support for Django 3.
+- Dropped support for Python 2, python 3.4 and Django 2.1.
 
 
 3.10 (2019-08-29)
